Fixed spacing on nav

--- a/losant/css/theme_extra.css
+++ b/losant/css/theme_extra.css
@@ -1246,7 +1246,7 @@
 .hs-menu-flow-horizontal ul li {
   float: left;
   display: inline-block;
-  margin-right: 50px;
+  margin-right: 35px;
   font-size: 16px;
   font-weight: normal;
 }
